add validations and refactor